<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="home">Popular Movies</string>
    <string name="movie_details">Movie Details</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, sea at option nostrum, per at eruditi appellantur. Cibo
        option id sed, id vel quem accommodare, maiorum percipitur ex duo. Quando labore ea nec. Probo congue nostrud ne
        ius, ei nec discere oportere urbanitas. Ex sit dicta civibus, dicam nullam aliquam has ex. Eu usu sapientem
        interpretaris, tale iisque vel no, brute apeirian qualisque qui ei. Vel fugit labitur ad, pri nullam antiopam
        no. Porro reformidans at est, duo nostro docendi fierent ea. Has stet scripserit temporibus at, per eruditi
        accusam id. Vix at habeo idque, ea est sint oblique pertinacia, utroque consulatu ex has. Exerci nostrud
        pericula has ad, mei graece fabellas efficiendi at. Assum salutandi disputando usu ne. Errem alterum ad est, in
        qui magna feugiat accommodare, an atqui phaedrum quaestio pri. Cu malis dicunt recusabo has, his aperiri
        repudiare at. Mel docendi inciderint an. Id has cibo inani minimum, oporteat dissentiunt his ei. Te augue
        hendrerit vel. Principes disputando referrentur ne usu, ne percipitur reformidans sed. Vis in congue aperiam
        fabulas, cum ad mucius contentiones. Sed ea ubique perfecto. Est at malis elitr munere, ea eum quodsi antiopam
        assueverit. No latine ceteros ius. Sit in tamquam instructior, lorem legendos ex quo. Ius nihil docendi
        persecuti te. Pro at adhuc solum adolescens. Nam ex sanctus consequuntur. No movet viderer cum, no duo quas
        tempor cetero, case elit no vel. Verterem elaboraret persequeris vis ei.
    </string>
    <string name="movie_image">movie image</string>
    <string name="thumbnail_image">Thumbnail Image</string>
    <string name="person_details">Person Details</string>
    <string name="action_filter">Filter</string>
    <string name="action_home">Home</string>
    <string name="action_view_on_imdb">View on IMDB</string>
    <string name="text_try_again">Try again</string>
    <string name="text_filter_options">Filter Options</string>
    <string name="text_genre">Genre</string>
    <string name="text_sort_by">Sort by</string>
    <string name="text_years">Years</string>
    <string name="text_rate">Rate</string>
    <string name="text_apply">Apply</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_reset">Reset</string>
    <string name="text_category">Category</string>
</resources>
